# classcharts-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
src/classcharts_api/: __init__.py  base_client.py  const.py  exceptions.py  models.py  parent_client.py  student_client.py  utils.py
tests/: conftest.py  test_parent_client.py  test_parent_client_live.py  test_student_client.py  test_utils.py
